--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img class="profile_pic" src="images/Morrison-modified.png" alt="profile-pic" width=200 height=200>
+        <img class="profile_pic" src="images/Morrison-picture.png" alt="profile-pic" width=200 height=200>
         <h2>Hello~</h2>
         <p class="intro">我是育昇，目前積極自學Python程式語言與SQL資料庫的資料串接與分析，會使用網站免費API以及BeautifulSoup套件擷取合法的公開資料，並在MySQL、SQLite系統進行資料庫設計與管理，也會使用Pandas套件將整理清楚的資料以圖表視覺化，有將RawData整理成有用資訊、將數據發揮價值的能力。
 <br><br>
